--- a/ValidationForm/index.html
+++ b/ValidationForm/index.html
@@ -26,22 +26,42 @@
         <span class="form-message"></span>
       </div>
   
+
+
       <div class="form-group">
         <label for="password_confirmation" class="form-label">Nhập lại mật khẩu</label>
         <input id="password_confirmation" name="password_confirmation" placeholder="Nhập lại mật khẩu" type="password" class="form-control">
         <span class="form-message"></span>
       </div>
 
+      <div class="form-group">
+        <label for="avatar" class="form-label">Avatar</label>
+        <input id="avatar" name="avatar"  type="file" class="form-control">
+        <span class="form-message"></span>
+      </div>
+
+      
+      <div class="form-group">
+        <label for="province" class="form-label">Tỉnh/TP</label>
+        <select id="province" name="province" class="form-control">
+          <option value="">-- Chọn Tỉnh/TP --</option>
+          <option value="hni">Hà Nội</option>
+          <option value="hpg">Hải Phòng</option>
+
+        </select>
+        <span class="form-message"></span>
+      </div>
+
       <div class="form-group horizontal">
         <label for="gender" class="form-label">Giới tính</label>
         <div>
-        <input name="gender" type="radio" value ="male" class="form-control">Nam 
+        <input name="gender" type="checkbox" value ="male" class="form-control">Nam 
       </div>
       <div>
-        <input name="gender" type="radio" value ="female" class="form-control">Nữ
+        <input name="gender" type="checkbox" value ="female" class="form-control">Nữ
       </div>
       <div>
-        <input name="gender" type="radio" value ="other" class="form-control">Khác
+        <input name="gender" type="checkbox" value ="other" class="form-control">Khác
       </div>
         <span class="form-message"></span>
       </div>
@@ -50,6 +70,29 @@
     </form>
   
   </div>
+
+  <form action="" method="POST" class="form" id="form-2">
+    <h3 class="heading">Đăng nhập</h3>
+    <p class="desc">❤️</p>
+
+    <div class="spacer"></div>
+
+    <div class="form-group">
+      <label for="email" class="form-label">Email</label>
+      <input id="email" name="email" type="text" placeholder="VD: email@domain.com" class="form-control">
+      <span class="form-message"></span>
+    </div>
+
+    <div class="form-group">
+      <label for="password" class="form-label">Mật khẩu</label>
+      <input id="password" name="password" type="password" placeholder="Nhập mật khẩu" class="form-control">
+      <span class="form-message"></span>
+    </div>
+
+    <button class="form-submit">Đăng nhập</button>
+  </form>
+
+</div>
 
   <script src="validator.js"></script>
   <script>
@@ -60,11 +103,13 @@
     rules: [
     Validator.isRequired('#fullname', 'Vui lòng nhập đầy đủ tên của bạn'),
     Validator.isRequired('#email'),
+    Validator.isRequired('#avatar'),
+
     Validator.isEmail('#email'),
     Validator.minLength('#password', 6),
     Validator.isRequired('#password_confirmation'),
     Validator.isRequired('input[name="gender"]'),
-
+    Validator.isRequired('#province'),
     Validator.isConfirmed('#password_confirmation', function() 
         { return document.querySelector('#form-1 #password').value;
     }, 'Mật khẩu nhập lại không chính xác')
@@ -74,5 +119,19 @@
         console.log(data);
       }
     });
+
+    Validator({
+          form: '#form-2',
+          formGroupSelector: '.form-group',
+          errorSelector: '.form-message',
+          rules: [
+            Validator.isEmail('#email'),
+            Validator.minLength('#password', 6),
+          ],
+          onSubmit: function (data) {
+            // Call API
+            console.log(data);
+          }
+        });
     
     </script>
